--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ img {
     display: block;
 }
 /*------------------------ Header --------------------------*/
+header{
+    border-bottom: gray solid 0.5px;
+}
 .header-icons{
     width: 15px;
     height: 15px;
@@ -67,9 +70,49 @@ header nav{
     display: flex;
     justify-content: center;
     gap: 4em;
-    
+    box-shadow: 0.5px 0.5px;
+    margin-bottom: 20px;
 }
 a{
+    margin-top: 1em;
     text-decoration: none;
     color: black;
+}
+/*--------------------articles------------------*/
+.Annonce-box{
+    display: flex;
+    justify-content: center;
+}
+.Annonce{
+    width: 1100px;
+    height: 200px;
+    object-fit: cover;
+}
+.text-annonce{
+    text-align: center;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+}
+.small-icons{
+    width: 15px;
+    height: 15px;
+}
+
+.First-article{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr 2fr;
+    height: 100vh;
+}
+.first-articleimg{
+    height: 500px;
+    width: 700px;
+}
+.first-articleSidetext{
+    margin-right: 20px;
+    justify-self: end;
+    margin-top: 90px;
+    width: 270px;
+    text-align: end;
+    
 }
