--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a{
     justify-content: center;
 }
 .Annonce{
-    width: 1100px;
+    width: 900px;
     height: 200px;
     object-fit: cover;
 }
@@ -93,19 +93,15 @@ a{
     writing-mode: vertical-rl;
     text-orientation: mixed;
 }
+
 .small-icons{
     width: 15px;
     height: 15px;
 }
 
-div aside p{
-    width: 250px;
-   text-align: right;
-    margin-left: 20px;
-
-}
 
 .First-article{
+    margin-top: 20px;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: 1fr 2fr;
@@ -119,7 +115,100 @@ div aside p{
 .first-articleSidetext{
     margin-right: 20px;
     justify-self: end;
-    margin-top: 90px;
+    margin-top: 230px;
     width: 270px;
     text-align: end;
+}
+
+.first-articlePtag{
+    margin-bottom: 20px;
+    margin-top: 10px;
+    width: 555px;
+}
+article h2{
+    width: 700px;
+    font-weight: bold;
+    font-size: 36px;
+}
+/*-------------------------Read more----------------------*/
+.readmore{
+    margin-top: 20px;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr 2fr;
+    grid-row: 1 1;
+    grid-column: 2 3;
+    height: 100vh;
+}
+.readmore-img{
+    width: 15px;
+    height: 15px;
+}
+.article-date{
+    display: flex;
+    gap: 20px;
+    margin-top: 45px;
+    
+}
+.article-date p{
+    flex-grow: 2;
+    gap: 20px;
+    border-bottom: 2px dotted;
+}
+
+.article-date small{
+    flex-grow: 1;
+}
+.article-date small:last-child{
+   margin-right: 310px;
+   display: flex;
+   justify-content: flex-end;
+   
+}
+.article-date small:first-of-type{
+    margin-right: 60px;
+    display: flex;
+}
+
+.socialmedia-button{
+    height: 40px;
+    width: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.socialmedia-buttonimg{
+   height: 30px;
+   width: 30px;
+ align-items: center;
+}   
+.facebook{
+    background-color: #306199;
+    color: white;
+}
+.twitter{
+    background-color: #26c4f1;
+    color: white;
+}
+.gmail{
+color: white;
+background-color: gray;
+}
+.readmore-subscription{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.click-herebutton{
+   width: 50px;
+   height: 50px;
+}
+
+.readmore-text{
+width: 280px;
+}
+
+.readmore-text2{
+    
 }
