nearly done fixing max width so content stays within frame

--- a/style.css
+++ b/style.css
@@ -77,8 +77,21 @@ a{
     margin-top: 1em;
     text-decoration: none;
     color: black;
+    margin-bottom: 1em;
+}
+a:hover{
+   color: #e23d58;
 }
 /*--------------------articles------------------*/
+
+main{
+    max-width: 1024px;
+    margin: auto;
+}
+section{
+    max-width: 1024px;
+    margin: auto;
+}
 .Annonce-box{
     display: flex;
     justify-content: center;
@@ -105,7 +118,7 @@ a{
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: 1fr 2fr;
-    height: 100vh;
+    height: 77vh;
 }
 
 .first-articleimg{
@@ -148,11 +161,13 @@ padding-top: 10px;
 }
 .readmore-text{
 width: 300px;
+margin-left: 30px;
 }
 .readmore-text2{
 width: 570px;
 text-align: center;
 align-content:end ;
+margin-left: 30px;
 }
 .readmore-text{
 grid-column: 2 / 2;
@@ -179,13 +194,12 @@ grid-row: 1 / 2;
     flex-grow: 1;
 }
 .article-date small:last-child{
-   margin-right: 310px;
    display: flex;
    justify-content: flex-end;
    
 }
 .article-date small:first-of-type{
-    margin-right: 60px;
+    margin-right: 250px;
     display: flex;
 }
 
@@ -193,7 +207,7 @@ grid-row: 1 / 2;
     height: 40px;
     width: 120px;
     margin-top: -100px;
-    margin-left: 300px;
+    margin-left: 500px;
 }
 .socialmedia-buttonimg{
    height: 30px;
@@ -228,8 +242,9 @@ align-items: center;
 justify-content: space-around;
 }
 .readmore-subscription{
-    width: 560px;
+    width: 560.5px;
     margin-top: 180px;
+    margin-left: 206px;
     box-shadow: -0px -24px 0px #fefefeec;
 }
 .readmore-subscription p{
@@ -270,7 +285,7 @@ justify-content: space-around;
     height: 20px;
 }
 .arrow-left{
-    margin-left: 1280px;
+    margin-left: 800px;
     border: none;
     background-color: white;
 }
@@ -279,17 +294,234 @@ justify-content: space-around;
     background-color: white;
 }
 .fournewsarticles{
+    font-size: 20px;
+}
+.fournewsarticles img{
     text-align: start;
-    width: 230px;
+    width: auto;
+    height: 245px;
 }
 .four-articlegrid{
-    width: 80rem;
-    margin-inline: auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
 }
 .fournewsarticles h2{
     font-size: 20px;
-    width: 300px;
+    width: 400px;
+}
+
+/*----------------------Latest news--------------------*/
+
+.latest-news{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: dotted;
+    align-items: end;
+    width: 1024px;
+    margin-left: 425px;
+}
+.latestnews-articleimg{
+    width: 200px;
+    
+}
+
+.latestnews-articles{
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 100vh;
+    position: relative;
+    width: 1024px;
+}
+.latestnews-articles ul p:last-child{
+  width: 200px;
+  margin: 0;
+  margin-bottom: 1em;
+  border-bottom: dotted 1px gray;
+}
+.latestnews-articles ul p:first-child{
+ margin-top: 17px;
+}
+.latestnews-articles ul li:last-child p{
+border: none;
+margin-bottom: 0;
+}
+
+.lastestnews-flexbox{
+    display: grid;
+    grid-template-areas:
+      "grid-head grid-head grid-head"
+      "article1 article2 article3"
+      "article4 article5 article6";
+      width: 1000px;
+      gap: 20px;
+      position: absolute;
+      margin-left: 350px;
+      margin-top: -720px;
+}
+.lastestnews-flexbox article{
+width: 300px;
+}
+.lastestnews-flexbox article:nth-child(5){
+width: 270px;
+}
+.grid-head{
+    grid-area: grid-head;
+}
+.article1{
+    grid-area: article1;
+}
+.article2{
+    grid-area: article2;
+}
+.article3{
+    grid-area: article3;
+}
+.article4{
+    grid-area: article4;
+}
+.article5{
+    grid-area: article5;
+}
+.article6{
+    grid-area: article6;
+}
+
+/*---------------comments------------------*/
+
+.comment-icons{
+    width: 25px;
+    height: 25px;
+}
+.comments-grid{
+    display: grid;
+    grid-template-areas:
+     "head-comments head-comments head-comments"
+     "aside-comment comments comments"
+     "aside-comment comments2 comments2";
+}
+
+.comments-top{
+    grid-area: comments;
+    
+    width: 550px;
+    height: 200px;
+}
+.comments-top .comments-henrik p:first-of-type{
+    font-size: 15px;
+    font-weight: bold;
+}
+.comments-henrik{
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.comments-bottom{
+    grid-area: comments2;
+    width: 570px;
+}
+.comments-Gert{
+    display: flex;
+    margin-bottom: 5px;
+}
+.head-comments{
+    grid-area: head-comments;
+    display: flex;
+    
+}
+.header-comments{
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.header-comments:first-of-type{
+    border-bottom: dotted 2px gray;
+    flex-grow: 0.2;
+}
+.header-comments:last-of-type{
+    margin-left: 50px;
+    flex-grow: 1;
+    border-bottom: dotted 2px gray ;
+}
+.suggest-article{
+ grid: aside-comment;
+}
+.comment-loginSignup{
+    margin-bottom: 100px;
+    color: gray;
+}
+/*---------------------footer-----------------*/
+footer{
+    position: absolute;
+    background-color: #d7d7d7;
+    color: #818183;
+    width: 100%;
+}
+.footer-grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+    margin-left: 10px;
+    margin-top: 20px;
+}
+
+.footer-icons{
+    height: 10px;
+    width: 10px;
+    
+}
+.footer-article{
+    width: 250px;
+    height: 350px;
+    position: relative;
+    margin-top: -40px;
+    display: inline;
+}
+.footer-gridspace{
+    width: 275px;
+}
+.form-gridspace p:last-of-type{
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+.form-gridspace{
+    width: 180px;
+}
+.form-gridspace p{
+    margin-bottom: 20px;
+}
+form{
+    width: 250px;
+}
+form input{
+    height: 25px;
+   border-radius: 2px;
+   border: none;
+}
+form button{
+    border: none;
+    height: 25px;
+    margin-left: 5px;
+    color: #818183;
+}
+.footer-infogridspace{
+    width: 98px;
+    font-size: 15px;
+}
+.contact-info{
+    border-top: solid 1px white;
+    display: flex;
+    grid-column: 1 / 5;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+}
+.contact-info p{
+    width: 1000px;
+    margin-top: 10px;
+}
+.contact-info button{
+    margin: 10px;
 }
