--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav div{
     background-color: white;
     border: none;
 }
-.header-button:hover{
+button:hover{
     cursor: pointer;
 }
 header nav{
@@ -81,6 +81,10 @@ a{
 }
 a:hover{
    color: #e23d58;
+}
+.red-text{
+ color: #dd0000;
+ font-size: 15px;
 }
 /*--------------------articles------------------*/
 
@@ -270,7 +274,6 @@ justify-content: space-around;
 /*---------------------------Did you read-------------------------*/
 .didyouread{
     display: flex;
-    gap: 20px;
     margin-top: 45px; 
     justify-content: space-between;
     border-bottom: dotted gray 3px;
@@ -319,10 +322,13 @@ justify-content: space-around;
     border-bottom: dotted;
     align-items: end;
     width: 1024px;
-    margin-left: 425px;
+    margin-inline: 420px;
+    
+    
 }
 .latestnews-articleimg{
-    width: 200px;
+    width: 235px;
+    height: 160px;
     
 }
 
@@ -333,6 +339,8 @@ justify-content: space-around;
     height: 100vh;
     position: relative;
     width: 1024px;
+    margin-left: 422px;
+    
 }
 .latestnews-articles ul p:last-child{
   width: 200px;
@@ -347,36 +355,40 @@ justify-content: space-around;
 border: none;
 margin-bottom: 0;
 }
-
+.latestnews-articles ul li{
+list-style: none;
+}
 .lastestnews-flexbox{
     display: grid;
     grid-template-areas:
       "grid-head grid-head grid-head"
       "article1 article2 article3"
       "article4 article5 article6";
-      width: 1000px;
-      gap: 20px;
+      width: 800px;
       position: absolute;
-      margin-left: 350px;
-      margin-top: -720px;
+      margin-left: 670px;
+      margin-top: -1000px;
+    gap: 20px;
+
 }
-.lastestnews-flexbox article{
-width: 300px;
-}
-.lastestnews-flexbox article:nth-child(5){
-width: 270px;
-}
+
 .grid-head{
     grid-area: grid-head;
 }
+p.grid-head{
+    margin-left: 30px;
+
+}
 .article1{
     grid-area: article1;
+    width: 250px;
 }
 .article2{
     grid-area: article2;
 }
 .article3{
     grid-area: article3;
+    width: 250px;
 }
 .article4{
     grid-area: article4;
@@ -400,11 +412,12 @@ width: 270px;
      "head-comments head-comments head-comments"
      "aside-comment comments comments"
      "aside-comment comments2 comments2";
+     width: 1024px;
+     margin-left: 420px;
 }
 
 .comments-top{
     grid-area: comments;
-    
     width: 550px;
     height: 200px;
 }
@@ -436,12 +449,13 @@ width: 270px;
 }
 .header-comments:first-of-type{
     border-bottom: dotted 2px gray;
-    flex-grow: 0.2;
+    flex-grow: 0.7;
 }
 .header-comments:last-of-type{
     margin-left: 50px;
-    flex-grow: 1;
+    flex-grow: 6;
     border-bottom: dotted 2px gray ;
+  
 }
 .suggest-article{
  grid: aside-comment;
@@ -459,16 +473,16 @@ footer{
 }
 .footer-grid{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1rem;
-    margin-left: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4rem;
+    margin-left: 400px;
     margin-top: 20px;
+    width: 1024px;
 }
 
 .footer-icons{
     height: 10px;
     width: 10px;
-    
 }
 .footer-article{
     width: 250px;
@@ -524,4 +538,8 @@ form button{
 }
 .contact-info button{
     margin: 10px;
+    border: none;
+    height: 25px;
+    margin-left: 5px;
+    color: #818183;
 }
